Assignments/Unit_2/Lecture_5/Assignment_4/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:19:11 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_3.o "..\\EX_3.c" 
..\EX_3.c: In function 'Reverse':
..\EX_3.c:19:13: warning: format '%c' expects argument of type 'int', but argument 2 has type 'char *' [-Wformat=]
    printf("%c" , sent);
             ^
..\EX_3.c: At top level:
..\EX_3.c:28:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o 
Info: Nothing to build for Assignment 4
11:21:37 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_3.o "..\\EX_3.c" 
..\EX_3.c:30:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o 
Info: Nothing to build for Assignment 4
11:22:44 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_3.o "..\\EX_3.c" 
..\EX_3.c:30:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o 
Info: Nothing to build for Assignment 4
Info: Nothing to build for Assignment 4
Info: Nothing to build for Assignment 4
11:44:02 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_3.o "..\\EX_3.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:13:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:32:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:30:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Assignment 4.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
11:44:21 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
11:45:16 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:13:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:32:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:30:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
Info: Nothing to build for Assignment 4
11:45:51 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:13:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:32:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:30:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Assignment 4.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
11:45:59 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
Info: Nothing to build for Assignment 4
12:16:44 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:13:5: warning: conflicting types for built-in function 'pow'
 int pow(const int x , int n);
     ^~~
..\EX_4.c: In function 'pow':
..\EX_4.c:19:10: error: assignment of read-only parameter 'x'
         x*=x;
          ^~
..\EX_4.c: At top level:
..\EX_4.c:31:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:29:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
12:16:49 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:13:5: warning: conflicting types for built-in function 'pow'
 int pow(const int x , int n);
     ^~~
..\EX_4.c: In function 'pow':
..\EX_4.c:19:10: error: assignment of read-only parameter 'x'
         x*=x;
          ^~
..\EX_4.c: At top level:
..\EX_4.c:31:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:29:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
12:17:01 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:13:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:31:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:29:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
12:19:41 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:13:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:30:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:28:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
Info: Nothing to build for Assignment 4
12:22:00 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:13:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:29:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:27:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
Info: Nothing to build for Assignment 4
12:26:55 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:14:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:32:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:30:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
Info: Nothing to build for Assignment 4
12:27:18 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:14:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:32:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:30:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
Info: Nothing to build for Assignment 4
12:28:36 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:14:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:32:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:30:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
Info: Nothing to build for Assignment 4
12:29:58 **** Incremental Build of configuration Debug for project Assignment 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX_4.o "..\\EX_4.c" 
..\EX_4.c:14:5: warning: conflicting types for built-in function 'pow'
 int pow(int x , int n);
     ^~~
..\EX_4.c:32:7: warning: return type of 'main' is not 'int' [-Wmain]
  void main() {
       ^~~~
..\EX_4.c: In function 'pow':
..\EX_4.c:30:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o "Assignment 4.exe" EX_1.o EX_2.o EX_3.o EX_4.o 
Info: Nothing to build for Assignment 4
